feat: make upcoming plans the default
